--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ reportlab==4.0.7
 requests==2.31.0
 twilio==9.0.0
 gunicorn==21.2.0
+psycopg2-binary==2.9.9
+SQLAlchemy==2.0.23
+Flask-SQLAlchemy==3.1.1
+Flask-Migrate==4.0.5
