--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ requests==2.31.0
 twilio==9.0.0
 gunicorn==21.2.0
 psycopg2-binary==2.9.9
-SQLAlchemy==2.0.23
+SQLAlchemy>=2.0.35
 Flask-SQLAlchemy==3.1.1
 Flask-Migrate==4.0.5
