--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Flask==3.0.0
 Werkzeug==3.0.1
 reportlab==4.0.7
 requests==2.31.0
-twilio==9.0.0
+twilio>=9.1.0
 gunicorn==21.2.0
 psycopg2-binary>=2.9.9
 SQLAlchemy>=2.0.35
